frontend/css/homepage.css
@font-face {
    font-family: 'Plovdiv Script';
    src: url('../../resources/PlovdivTypeface-Fonts/PlovdivTypeface-Fonts/OTF/PlovdivSans.otf');
    font-weight: light;
    font-style: normal;
}

:root {
    --main-color: #CDEAEE;
    --color-dark: #1D2231;
    --text-grey: #506463;
    --text-on-dark-background: #FCFCFC;
    font-family: 'Plovdiv Script', 'PlovdivSans';
    color: var(--text-grey);
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    list-style-type: none;
    text-decoration: none;
    position: relative;
}

.site-logo {
    right: 0;
    /* height: 6.5%;
    width: 6.5%; */
    object-fit: cover;
    margin-right: 3%;
    margin-left: 10%;
}

header{
    background: #FCFCFC;
    position: fixed;
    display: inline-flex;
    justify-content: right;
    z-index: 100;
    top: 0;
    width: 100%;
    height: 10vh;
}

.logout-wrapper, 
.home-wrapper, 
.map-wrapper, 
.about-us-wrapper {
    font-weight: bold;
    display: flex;
    align-items: center;
    text-align: center;
}

#accountIcon {
    margin-right: 0.5rem;
}


main {
    margin-top: 140px;
    min-height: calc(100vh - 90px);
}

.main-text,
.subtitle {
    z-index: 2;
    padding-left: 3%;
    padding-bottom: 3%;
}

.title-text h1 {
    display: inline;
}

.title-text .detskite {
    color: #F24630;
}

.title-text .ploshtadki {
    color: #FECD1B;
}

.background-img {
    margin-top: -60vh;
    position: relative;
    width: 100vw;
    object-fit: contain;
}

.title-page {
    overflow-y: hidden;
    overflow-x: hidden;
    width: 100%;
}

/* 
.map-page-main-text {
    text-align: justify;
} */

.map-title,
.map-title-last {
    font-size: 60px;
    color: #F24630;
}

.map-title-last {
    padding-bottom: 20%;
}

.text-with-counter{
    display: flex;
    justify-content: left;
    align-items: center;
    background: linear-gradient(to right, 
                                transparent 0%, 
                                transparent calc(50% - 0.81px), 
                                black calc(50% - 0.8px), 
                                black calc(50% + 0.8px), 
                                transparent calc(50% + 0.81px), 
                                transparent 100%);
}

#igrata {
    flex-direction: column;
    margin-left: 2vw;
    margin-bottom: 2vw;
    justify-content: right;
}

#igrata-inner {
    justify-content: right;
}

.number-of-playgrounds {
    margin-right: 2vw;
    font-size: 70px;
    font-weight: bold;
}

.number-of-playgrounds-text {
    font-size: medium;
    font-weight: normal;
}

.add-playground-btn {
    background-color: #CDEAEE;
    margin-top: 15px;
    color: var(--text-grey);
    height: 5vh;
    width: 15vw;
    border-radius: 15px;
    border: 0;
    outline: 0;
    cursor: pointer;
    transition: background 1s;
    font-family: 'Plovdiv Script', 'PlovdivSans';
    margin-bottom: 20px;
}

.add-playground-btn i {
    background-color: #CDEAEE;
    color: var(--text-grey);
}

/* ////////////////////////////////////////////////////// */

.recent-grid {
    margin-top: 3.5rem;
}

table {
    border-collapse: collapse;
}

thead tr {
    border-top: 1px solid #FCFCFC;
    border-bottom: 2px solid #FCFCFC;
}

thead td {
    font-weight: 700;
}

td {
    padding: .5rem 1rem;
    font-size: .9rem;
    color: #222;
}

td .status {
    display: inline-block;
    height: 10px;
    width: 10px;
    border-radius: 50%;
    margin-right: 1rem;
}

tr td:last-child {
    display: flex;
    align-items: center;
}

.status.purple {
    background: var(--main-color);
}

.status.grey {
    background: var(--text-grey);
}

.status.light-purple {
    background: #735c86;
}

#project-form {
    margin-top: 2rem;
}


.project-input-text {
    width: 100%;
    padding-top: 1%;
    padding-bottom: 1%;
    padding-left: 1%;
    margin: 0% 5% 2% 0%;
    font-size: 15px;
    box-sizing: border-box;
    border: 3px solid #222;
    border-radius: 5px;
}

#add-project-btn,
#cancel-add-project-btn,
.logout-wrapper div,
.home-wrapper div,
.about-us-wrapper div, 
.map-wrapper div,
#import-chosen-file-btn,
#cancel-import-btn {
    background-color: #FCFCFC;
    color: var(--text-grey);
    padding: .5rem 1rem;
    cursor: pointer;
    border: none;
    font-size: 20px;
}

#add-project-btn:hover,
#cancel-add-project-btn:hover,
.logout-wrapper div:hover,
.home-wrapper div:hover,
.map-wrapper div:hover,
.about-us-wrapper div:hover,
#import-chosen-file-btn:hover,
#cancel-import-btn:hover {
    transition: background 1s;
    color: #62BEC9;
}

.project-input:hover {
    border: 3px solid #735c86;
}

form textarea {
    resize: none;
}

.table-responsive {
    width: 100%;
    overflow-x: auto;
}

@media only screen and (max-width: 960px) {
    .tiles {
        grid-template-columns: repeat(2, 1fr);
    }
    .recent-grid {
        grid-template-columns: 60% 40%;
    }
}

@media only screen and (max-width: 768px) {
    .tiles {
        grid-template-columns: repeat(1, 1fr);
    }
    .recent-grid {
        grid-template-columns: 100%;
    }
    .search-wrapper {
        display: none;
    }

}

@media only screen and (max-width: 560px) {
    .logout-wrapper div,
    .home-wrapper div,
    .about-us-wrapper div, 
    .map-wrapper div {
        font-size: 14px;
        padding: .2rem 0.7rem;
    }
    .map-title,
    .map-title-last {
        font-size: 14px;
    }
    .number-of-playgrounds {
        font-size: 30px;
        font-weight: bold;
    }
    .tiles {
        grid-template-columns: 100%;
    }
    .add-playground-btn {
        font-size: 8px;
        width: 63vw;
        margin-right: 2px;
        height: 4vh;
    }
    .map-page-main-text {
        padding-right: 1.5rem;
        font-size: 6.3px;
    }
}

@media only screen and (max-width: 380px) {
    .map-title,
    .map-title-last {
        font-size: 12px;
    }

    .map-page-main-text {
        font-size: 6px;
    }
}

/*Galaxy fold...*/
@media only screen and (max-width: 280px) {

    .logout-wrapper div,
    .home-wrapper div,
    .about-us-wrapper div, 
    .map-wrapper div {
        font-size: 10.8px;
        padding: 0.1rem 0.4rem;
    }

    .map-title,
    .map-title-last {
        font-size: 10px;
    }

    .map-page-main-text {
        font-size: 5px;
    }
    .number-of-playgrounds {
        font-size: 20px;
        font-weight: bold;
    }

}

/* make table rows interactive */

.card-body tr:hover td {
    color: #FCFCFC;
    cursor: pointer;
    transition: background .1s;
    background-color: var(--main-color);
    font-weight: bold;
}

.card-body thead tr:hover td {
    color: #222;
    cursor: auto;
    transition: none;
    background-color: #FCFCFC;
}


/* list items active */

li .active-hover {
    background: #FCFCFC;
    color: var(--main-color);
    transition: background 0.2s;
    padding-top: 1rem;
    padding-bottom: 1rem;
    border-radius: 30px 0px 0px 30px;
}

li a .active-hover {
    color: var(--main-color);
    transition: background 0.2s;
}


@media only screen and (max-height: 1368px) {
    .background-img {
        margin-top: -20vh;
    }
}


@media only screen and (max-height: 960px) {
    .background-img {
        margin-top: -10vh;
    }
    
}

@media only screen and (max-height: 1368px) and (min-width: 1024px) {
    .background-img {
        margin-top: -48vh;
    }
}

